--- a/app/src/main/res/layout/monitoring_act.xml
+++ b/app/src/main/res/layout/monitoring_act.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:orientation="vertical"
-             tools:context=".monitoring.MonitoringActivity">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical"
+       tools:context=".monitoring.MonitoringActivity">
 
     <FrameLayout
         android:id="@+id/contentFrame"
@@ -31,5 +31,4 @@
             android:background="@color/colorCameraSettingsFrameBg"/>
 
     </RelativeLayout>
-
-</FrameLayout>
+</merge>
