Add apiary general info #143

--- a/app/src/main/res/layout/addeditapiary_frag.xml
+++ b/app/src/main/res/layout/addeditapiary_frag.xml
@@ -64,7 +64,7 @@
                 android:layout_gravity="center"
                 android:adjustViewBounds="false"
                 android:contentDescription="@string/gps_location_icon"
-                android:src="@drawable/ic_my_location"
+                android:src="@drawable/ic_get_location"
                 android:tint="@color/colorAccent"/>
 
         </RelativeLayout>
