Generate random apiary location #143

--- a/app/src/main/res/layout/apiary_info_frag.xml
+++ b/app/src/main/res/layout/apiary_info_frag.xml
@@ -466,7 +466,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginTop="8dp"
                         android:gravity="right"
-                        android:text="@string/openweathermap"
+                        android:text="@string/open_weather_map"
                         android:textColor="@color/colorSecondaryText"
                         android:textSize="10sp"/>
 
