--- a/app/src/main/res/drawable-anydpi/ic_hive.xml
+++ b/app/src/main/res/drawable-anydpi/ic_hive.xml
@@ -1,9 +1,25 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportHeight="24.0"
-        android:viewportWidth="24.0">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z"/>
+        android:pathData="M0,0h24v24H0V0z" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M 3.7 4.1 H 20.4 V 6.9 H 3.7 V 4.1 Z" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M 5 7.2 L 5 17.8 L 9.7 17.8 L 9.7 16.8 L 14.3 16.8 L 14.3 17.8 L 19 17.8 L 19 7.2 Z" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M 5 17.6 H 19 V 18.4 H 5 V 17.6 Z" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M 6.6 18.8 H 8.5 V 20 H 6.6 V 18.8 Z" />
+    <path
+        android:fillColor="#000000"
+        android:pathData="M 15.5 18.8 H 17.4 V 20 H 15.5 V 18.8 Z" />
 </vector>
