--- a/app/src/main/res/layout/recording_frag.xml
+++ b/app/src/main/res/layout/recording_frag.xml
@@ -49,6 +49,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
                     android:layout_weight="3"/>
 
 
