--- a/app/src/main/res/xml/general_settings.xml
+++ b/app/src/main/res/xml/general_settings.xml
@@ -22,11 +22,29 @@
     <PreferenceCategory
         android:key="@string/pref_weather_cat_key"
         android:title="@string/pref_weather_cat_label">
+
         <ListPreference
             android:defaultValue="@string/pref_weather_units_metric"
             android:entries="@array/pref_temp_units_options"
             android:entryValues="@array/pref_temp_units_values"
             android:key="@string/pref_weather_units_key"
             android:title="@string/pref_weather_units_label"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="@string/pref_data_cat_key"
+        android:title="@string/pref_data_cat_label">
+
+        <Preference
+            android:key="@string/pref_generate_sample_data_key"
+            android:summary="@string/pref_generate_sample_data_desc"
+            android:title="@string/pref_generate_sample_data_label"/>
+
+        <Preference
+            android:key="@string/pref_delete_all_data_key"
+            android:summary="@string/pref_delete_all_data_desc"
+            android:title="@string/pref_delete_all_data_label"/>
+
     </PreferenceCategory>
 </PreferenceScreen>
