--- a/app/src/main/res/layout/addeditapiary_frag.xml
+++ b/app/src/main/res/layout/addeditapiary_frag.xml
@@ -73,9 +73,9 @@
             android:id="@+id/add_apiary_notes"
             android:layout_width="match_parent"
             android:layout_height="350dp"
-            android:gravity="top"
+            android:gravity="top|left"
             android:hint="@string/apiary_notes_hint"
-            android:inputType="textCapSentences"/>
+            android:inputType="textMultiLine|textCapSentences"/>
 
     </LinearLayout>
 </ScrollView>
