--- a/app/src/main/res/layout/apiary_info_frag.xml
+++ b/app/src/main/res/layout/apiary_info_frag.xml
@@ -308,23 +308,18 @@
                         android:layout_marginBottom="16dp"
                         android:background="@color/colorDivider"/>
 
-                    <LinearLayout
+                    <TableLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:baselineAligned="false"
-                        android:orientation="horizontal"
                         android:paddingEnd="24dp"
-                        android:paddingStart="24dp">
+                        android:paddingStart="24dp"
+                        android:stretchColumns="*">
 
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="vertical">
+                        <TableRow android:layout_width="0dp">
 
                             <TextView
                                 android:id="@+id/condition_label"
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="4dp"
                                 android:text="@string/weather_condition"
@@ -332,8 +327,20 @@
                                 android:textColor="@color/colorSecondaryText"/>
 
                             <TextView
+                                android:id="@+id/condition"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="4dp"
+                                android:text="@string/condition_800"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                                android:textColor="@color/colorPrimaryText"/>
+                        </TableRow>
+
+                        <TableRow android:layout_width="0dp">
+
+                            <TextView
                                 android:id="@+id/humidity_label"
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="4dp"
                                 android:text="@string/humidity"
@@ -341,8 +348,20 @@
                                 android:textColor="@color/colorSecondaryText"/>
 
                             <TextView
+                                android:id="@+id/humidity"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="4dp"
+                                android:text="@string/default_humidity"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                                android:textColor="@color/colorPrimaryText"/>
+                        </TableRow>
+
+                        <TableRow android:layout_width="0dp">
+
+                            <TextView
                                 android:id="@+id/pressure_label"
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="4dp"
                                 android:text="@string/pressure"
@@ -350,8 +369,20 @@
                                 android:textColor="@color/colorSecondaryText"/>
 
                             <TextView
+                                android:id="@+id/pressure"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="4dp"
+                                android:text="@string/default_pressure"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                                android:textColor="@color/colorPrimaryText"/>
+                        </TableRow>
+
+                        <TableRow android:layout_width="0dp">
+
+                            <TextView
                                 android:id="@+id/wind_label"
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="4dp"
                                 android:text="@string/wind"
@@ -359,8 +390,20 @@
                                 android:textColor="@color/colorSecondaryText"/>
 
                             <TextView
+                                android:id="@+id/wind"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="4dp"
+                                android:text="@string/default_wind"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                                android:textColor="@color/colorPrimaryText"/>
+                        </TableRow>
+
+                        <TableRow android:layout_width="0dp">
+
+                            <TextView
                                 android:id="@+id/rain_label"
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="4dp"
                                 android:text="@string/rain"
@@ -368,8 +411,21 @@
                                 android:textColor="@color/colorSecondaryText"/>
 
                             <TextView
+                                android:id="@+id/rain"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="4dp"
+                                android:text="@string/default_rain_snow"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                                android:textColor="@color/colorPrimaryText"/>
+
+                        </TableRow>
+
+                        <TableRow android:layout_width="0dp">
+
+                            <TextView
                                 android:id="@+id/snow_label"
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="4dp"
                                 android:text="@string/snow"
@@ -377,88 +433,36 @@
                                 android:textColor="@color/colorSecondaryText"/>
 
                             <TextView
+                                android:id="@+id/snow"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginBottom="4dp"
+                                android:text="@string/default_rain_snow"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                                android:textColor="@color/colorPrimaryText"/>
+                        </TableRow>
+
+                        <TableRow android:layout_width="0dp">
+
+                            <TextView
                                 android:id="@+id/updated_label"
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="4dp"
                                 android:text="@string/last_updated"
                                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                 android:textColor="@color/colorSecondaryText"/>
 
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="center_horizontal"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:id="@+id/condition"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="4dp"
-                                android:text="@string/condition_800"
-                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                                android:textColor="@color/colorPrimaryText"/>
-
-                            <TextView
-                                android:id="@+id/humidity"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="4dp"
-                                android:text="@string/default_humidity"
-                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                                android:textColor="@color/colorPrimaryText"/>
-
-                            <TextView
-                                android:id="@+id/pressure"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="4dp"
-                                android:text="@string/default_pressure"
-                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                                android:textColor="@color/colorPrimaryText"/>
-
-                            <TextView
-                                android:id="@+id/wind"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="4dp"
-                                android:text="@string/default_wind"
-                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                                android:textColor="@color/colorPrimaryText"/>
-
-                            <TextView
-                                android:id="@+id/rain"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="4dp"
-                                android:text="@string/default_rain_snow"
-                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                                android:textColor="@color/colorPrimaryText"/>
-
-                            <TextView
-                                android:id="@+id/snow"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="4dp"
-                                android:text="@string/default_rain_snow"
-                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                                android:textColor="@color/colorPrimaryText"/>
-
                             <TextView
                                 android:id="@+id/updated"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="4dp"
                                 android:text="@string/default_last_updated"
                                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                 android:textColor="@color/colorPrimaryText"/>
-
-                        </LinearLayout>
-                    </LinearLayout>
+                        </TableRow>
+                    </TableLayout>
 
                     <TextView
                         android:id="@+id/source"
