Add new tests to utility classes #171

--- a/app/src/main/res/layout/monitoring_frag.xml
+++ b/app/src/main/res/layout/monitoring_frag.xml
@@ -62,7 +62,7 @@
     </LinearLayout>
 
 
-    <com.davidmiguel.gobees.camera.CameraView
+    <com.davidmiguel.gobees.monitoring.camera.CameraView
         android:id="@+id/camera_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
