Convert to latex point 5 #124

--- a/app/src/main/res/drawable-anydpi/splash.xml
+++ b/app/src/main/res/drawable-anydpi/splash.xml
@@ -20,7 +20,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:drawable="@color/colorSplashBg"/>
+        android:drawable="@color/colorPrimaryDark"/>
 
     <item>
         <bitmap
