--- a/app/src/main/res/layout/about_frag.xml
+++ b/app/src/main/res/layout/about_frag.xml
@@ -30,8 +30,8 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
         android:layout_gravity="center"
         android:adjustViewBounds="false"
         android:contentDescription="@string/gobees_logo"
