--- a/app/src/main/res/layout/apiary_act.xml
+++ b/app/src/main/res/layout/apiary_act.xml
@@ -43,7 +43,7 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="fixed" />
+            app:tabMode="fixed"/>
 
     </android.support.design.widget.AppBarLayout>
 
@@ -61,7 +61,7 @@
                 android:id="@+id/viewpager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorBackground" />
+                android:background="@color/colorBackground"/>
 
         </FrameLayout>
 
@@ -71,6 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
             android:src="@drawable/ic_add"
+            android:visibility="gone"
             app:fabSize="normal"
             app:layout_anchor="@id/contentFrame"
             app:layout_anchorGravity="bottom|right|end"/>
