--- a/app/src/main/res/layout/hive_act.xml
+++ b/app/src/main/res/layout/hive_act.xml
@@ -71,6 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
             android:src="@drawable/ic_recording"
+            android:visibility="gone"
             app:fabSize="normal"
             app:layout_anchor="@id/contentFrame"
             app:layout_anchorGravity="bottom|right|end"/>
