--- a/app/src/main/res/drawable-anydpi/chart_fade.xml
+++ b/app/src/main/res/drawable-anydpi/chart_fade.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="90"
-        android:endColor="#ffd180"
-        android:startColor="#ffa000"/>
+        android:endColor="@color/endColorChart"
+        android:startColor="@color/startColorChart"/>
 </shape>
