--- a/app/src/main/res/layout/apiaries_list_item.xml
+++ b/app/src/main/res/layout/apiaries_list_item.xml
@@ -23,7 +23,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="112dp"
+    android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="16dp"
@@ -31,14 +31,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/apiary_image"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:scaleType="centerCrop"
@@ -60,6 +60,7 @@
             android:layout_toStartOf="@+id/more_icon"
             android:ellipsize="end"
             android:maxLines="2"
+            android:minHeight="52sp"
             android:text="@string/default_apiary_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="@color/colorPrimaryText"/>
@@ -81,7 +82,7 @@
             android:id="@+id/hive_icon"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@id/apiary_name"
             android:layout_marginBottom="16dp"
             android:layout_marginStart="16dp"
             android:layout_toEndOf="@id/apiary_image"
@@ -94,7 +95,7 @@
             android:id="@+id/num_hives"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@id/apiary_name"
             android:layout_marginBottom="16dp"
             android:layout_marginStart="4dp"
             android:layout_toEndOf="@id/hive_icon"
@@ -107,7 +108,7 @@
             android:id="@+id/weather_icon"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@id/apiary_name"
             android:layout_marginBottom="16dp"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_toEndOf="@id/num_hives"
@@ -121,7 +122,7 @@
             android:id="@+id/temp"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@id/apiary_name"
             android:layout_marginBottom="16dp"
             android:layout_marginStart="4dp"
             android:layout_toEndOf="@id/weather_icon"
@@ -135,8 +136,8 @@
             android:id="@+id/enter_icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
+            android:layout_below="@id/apiary_name"
             android:layout_gravity="center"
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="8dp"
