--- a/app/src/main/res/layout/apiary_hives_list_item.xml
+++ b/app/src/main/res/layout/apiary_hives_list_item.xml
@@ -23,7 +23,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="112dp"
+    android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
     android:layout_marginTop="16dp"
@@ -31,14 +31,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/hive_image"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
+            android:layout_centerInParent="true"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:scaleType="centerCrop"
@@ -60,6 +60,7 @@
             android:layout_toStartOf="@+id/more_icon"
             android:ellipsize="end"
             android:maxLines="2"
+            android:minHeight="52sp"
             android:text="@string/default_hive_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textColor="@color/colorPrimaryText"/>
@@ -81,7 +82,7 @@
             android:id="@+id/last_revision_icon"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@id/hive_name"
             android:layout_marginBottom="16dp"
             android:layout_marginStart="16dp"
             android:layout_toEndOf="@id/hive_image"
@@ -94,7 +95,7 @@
             android:id="@+id/last_revision"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@id/hive_name"
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="4dp"
             android:layout_marginStart="4dp"
@@ -111,8 +112,8 @@
             android:id="@+id/enter_icon"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
+            android:layout_below="@id/hive_name"
             android:layout_gravity="center"
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="8dp"
@@ -122,5 +123,4 @@
             android:tint="@color/colorAccent"/>
 
     </RelativeLayout>
-
 </android.support.v7.widget.CardView>
