--- a/app/src/main/res/layout/storagebackup_frag.xml
+++ b/app/src/main/res/layout/storagebackup_frag.xml
@@ -78,7 +78,7 @@
         android:textColor="@color/colorSecondaryText"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/backup_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
